--- a/main.css
+++ b/main.css
@@ -42,6 +42,8 @@ body {
       margin-bottom: 15px; }
     body main #markdown-toc {
       font-weight: bold; }
+    body main h1 a:link, body main h1 a:visited, body main h2 a:link, body main h2 a:visited, body main h3 a:link, body main h3 a:visited, body main h4 a:link, body main h4 a:visited, body main h5 a:link, body main h5 a:visited {
+      color: black; }
     body main a:link {
       color: #28F; }
     body main a:visited {
