--- a/main.css
+++ b/main.css
@@ -44,6 +44,8 @@ body {
       font-weight: bold; }
     body main h1 a:link, body main h1 a:visited, body main h2 a:link, body main h2 a:visited, body main h3 a:link, body main h3 a:visited, body main h4 a:link, body main h4 a:visited, body main h5 a:link, body main h5 a:visited, body main h6 a:link, body main h6 a:visited {
       color: black; }
+    body main h2, body main h3, body main h4, body main h5, body main h6 {
+      font-size: 24px; }
     body main a:link {
       color: #28F; }
     body main a:visited {
